# MCP_Command_Bridge

./: .dockerignore  .env.example  .gitignore  Dockerfile  MCP_Command_Bridge_prd.md  README.md  config.example.yaml  config.vps.yaml  docker-compose.yml  pyproject.toml
agent_workspace/: check_system.py  fetch_ollama.py  ping_trace.py  test_bing.py  test_google.py  test_nvidia.py  test_nvidia_api.py  test_nvidia_chat.py  test_nvidia_chat2.py  test_nvidia_chat3.py  test_nvidia_detailed.py  traceroute.py  traceroute_test.py  tracert_run.py  百年孤独.md
deploy/: deploy.sh  mcp-command-bridge.service
deploy/nginx/: mcp-command-bridge.conf
docs/: development.md  vps-deployment.md
mcp_command_bridge/: __init__.py  audit.py  auth.py  bridge.py  config.py  errors.py  executor.py  file_ops.py  http_tools.py  network_tools.py  policy.py  rate_limit.py  secrets.py  server.py  system_tools.py
scripts/: generate_token.py
tests/: integration_test.py  t_bash.json  t_init.json  t_policy.json  t_probe.json  t_py.json  t_read.json  t_sys.json  t_write.json  test_auth.py  test_bridge.py  test_capabilities.py  test_compact_tools.py  test_config.py  test_curl_policy.py  test_executor.py  test_file_ops.py  test_http_tools.py  test_network_tools.py  test_rate_limit.py  test_run_shell.py  test_secrets.py  test_server.py  test_system_tools.py
